# crypto

./: .gitignore  Cargo.toml  NOTICE.md  README.md  rustfmt.toml
bbs_plus/: Cargo.toml  README.md
bbs_plus/src/: error.rs  lib.rs  proof.rs  proof_23.rs  proof_23_alternate.rs  proof_23_cdl.rs  proof_23_ietf.rs  serde_utils.rs  setup.rs  signature.rs  signature_23.rs
bbs_plus/src/threshold/: base_ot_phase.rs  cointoss.rs  commitment.rs  mod.rs  multiplication_phase.rs  randomness_generation_phase.rs  threshold_bbs.rs  threshold_bbs_plus.rs  utils.rs  zero_sharing.rs
benches/: Cargo.toml  README.md
benches/benches/: accum_witness_updates.rs  bbs_plus_proof.rs  bbs_plus_signature.rs  bbs_proof.rs  bbs_signature.rs  dkls19_batch_mul_2p.rs  kos_ote.rs  positive_accumulator.rs  ps_proof.rs  ps_signature.rs  schnorr_protocol.rs  syra.rs  universal_accumulator.rs
benches/src/: accumulators.rs  lib.rs  ot.rs  sig.rs
bulletproofs_plus_plus/: Cargo.toml
bulletproofs_plus_plus/src/: error.rs  lib.rs  range_proof.rs  range_proof_arbitrary_range.rs  rangeproof.rs  setup.rs  util.rs  weighted_norm_linear_argument.rs
coconut/: Cargo.toml  README.md
coconut/src/: lib.rs  macros.rs  tests.rs
coconut/src/helpers/: aliases.rs  iter.rs  mod.rs  owned_pairs.rs  try_iter.rs  with_schnorr_and_blindings.rs  with_schnorr_response.rs
coconut/src/proof/: mod.rs
coconut/src/setup/: mod.rs  signature_params.rs
coconut/src/signature/: aggregated_signature.rs  blind_signature.rs  error.rs  message_commitment.rs  mod.rs  ps_signature.rs
compressed_sigma/: Cargo.toml  Readme.md
compressed_sigma/src/: amortized_homomorphism.rs  amortized_homomorphisms.rs  amortized_linear_form.rs  compressed_homomorphism.rs  compressed_linear_form.rs  error.rs  lib.rs  partial_knowledge.rs  sponge.rs  transforms.rs  utils.rs
delegatable_credentials/: Cargo.toml  README.md
delegatable_credentials/src/: accumulator.rs  auditor.rs  error.rs  lib.rs  mercurial_sig.rs  one_of_n_proof.rs  set_commitment.rs  util.rs
delegatable_credentials/src/msbm/: issuance.rs  keys.rs  mod.rs  show.rs  sps_eq_uc_sig.rs
delegatable_credentials/src/protego/: issuance.rs  keys.rs  mod.rs
dock-crypto-utils/: Cargo.toml
dock-crypto-utils/src/: hashing_utils.rs  lib.rs  serde_utils.rs
equality_across_groups/: Cargo.toml  README.md
equality_across_groups/src/: eq_across_groups.rs  error.rs  lib.rs  pok_ecdsa_pubkey.rs  tom256.rs  util.rs
kvac/: Cargo.toml  README.md
kvac/src/: error.rs  lib.rs
legogroth16/: Cargo.toml  README.md
legogroth16/src/: constraints.rs  data_structures.rs  error.rs  generator.rs  lib.rs  prover.rs  r1cs_to_qap.rs  tests.rs  verifier.rs
legogroth16/test-vectors/: multiply2_goldilocks.r1cs  multiply2_goldilocks.wasm
legogroth16/tests/: mimc.rs
merlin/: Cargo.toml  README.md
merlin/src/: lib.rs  strobe.rs  transcript.rs
oblivious_transfer/: Cargo.toml  README.md  build.rs
oblivious_transfer/c/: transpose.c
oblivious_transfer/src/: aes_prng.rs  cointoss.rs  configs.rs  dkls_mul_2p.rs  error.rs  lib.rs  util.rs  zero_sharing.rs
proof_system/: Cargo.toml  README.md
proof_system/src/: constants.rs  derived_params.rs  error.rs  lib.rs  macros.rs  meta_statement.rs  proof.rs  proof_spec.rs  proof_spec_v2.rs  proof_v2.rs  prover.rs  setup_params.rs  statement.rs  statement_proof.rs  sub_protocols.rs  test_utils.rs  tests.rs  tests_bbs_plus_and_accumulator.rs  tests_bound.rs  tests_saver.rs  util.rs  verifier.rs  witness.rs
proof_system/tests/: accumulators.rs  bbs_plus_and_accumulator.rs  blind_bbs_plus_sig_and_message_equality.rs  bound_check_bpp.rs  bound_check_legogroth16.rs  bound_check_smc.rs  bound_check_smc_with_kv.rs  bounds.rs  kvac.rs  main.rs  ped_comm.rs  proof_aggregation.rs  ps_signature.rs  saver.rs  verifiable_encryption_tz21.rs
saver/: Cargo.toml  README.md
saver/src/: circuit.rs  commitment.rs  encryption.rs  error.rs  keygen.rs  lib.rs  saver_groth16.rs  saver_legogroth16.rs  setup.rs  tests.rs  utils.rs
schnorr/: Cargo.toml
schnorr/src/: error.rs  lib.rs
schnorr_pok/: Cargo.toml  README.md
schnorr_pok/src/: discrete_log.rs  discrete_log_pairing.rs  error.rs  inequality.rs  lib.rs  mult_relations.rs  partial.rs  pok_generalized_pedersen.rs  product_relations.rs
secret_sharing_and_dkg/: Cargo.toml  README.md
secret_sharing_and_dkg/src/: abcp_dkg.rs  abcp_ni_tzk_extended.rs  baghery_feldman_vss.rs  baghery_vss.rs  common.rs  error.rs  feldman_dvss_dkg.rs  feldman_vss.rs  frost_dkg.rs  gennaro_dkg.rs  lib.rs  pedersen_dvss.rs  pedersen_vss.rs  shamir_ss.rs
short_group_sig/: Cargo.toml  README.md
short_group_sig/src/: bb_sig.rs  bb_sig_pok.rs  bb_sig_pok_alt.rs  bb_sig_pok_cdh.rs  common.rs  error.rs  lib.rs  threshold_weak_bb_sig.rs  weak_bb_sig.rs  weak_bb_sig_pok.rs  weak_bb_sig_pok_alt.rs  weak_bb_sig_pok_cdh.rs  weak_bb_sig_pok_kv.rs
smc_range_proof/: Cargo.toml  README.md
smc_range_proof/src/: bb_sig.rs  common.rs  error.rs  lib.rs
syra/: Cargo.toml  README.md
syra/src/: error.rs  lib.rs  pseudonym.rs  pseudonym_alt.rs  setup.rs  threshold_issuance.rs  vrf.rs
test_utils/: Cargo.toml
test_utils/src/: accumulators.rs  bbs.rs  bbs_plus.rs  kvac.rs  lib.rs  ot.rs  serialization.rs  statistics.rs
utils/: Cargo.toml  README.md
utils/src/: aliases.rs  commitment.rs  ec.rs  ecies.rs  elgamal.rs  extend_some.rs  ff.rs  hashing_utils.rs  iter.rs  lib.rs  macros.rs  misc.rs  msm.rs  owned_pairs.rs  pairs.rs  poly.rs  randomized_mult_checker.rs  randomized_pairing_check.rs  schnorr_signature.rs  serde_utils.rs  signature.rs  solve_discrete_log.rs  transcript.rs  try_iter.rs
vb_accumulator/: Cargo.toml  README.md
vb_accumulator/src/: batch_utils.rs  error.rs  init_generation.rs  lib.rs  persistence.rs  positive.rs  proofs.rs  proofs_alt.rs  proofs_cdh.rs  proofs_keyed_verification.rs  setup.rs  setup_keyed_verification.rs  tests.rs  universal.rs  universal_init.sage  universal_init_constants.rs  utils.rs  witness.rs
verifiable_encryption/: Cargo.toml  README.md
verifiable_encryption/src/: error.rs  lib.rs
(+387 files in other folders)
