[workspace]

members = [
    "utils",
    "schnorr_pok",
    "bbs_plus",
    "vb_accumulator",
    "proof_system",
    "saver",
    "compressed_sigma",
    "benches",
    "test_utils"
]
resolver = "2"

[profile.release]
lto = true

[profile.bench]
lto = true

[profile.production]
inherits = "release"
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1