[workspace]

members = [
    "utils",
    "schnorr_pok",
    "bbs_plus",
    "vb_accumulator",
    "proof_system",
    "saver",
    "compressed_sigma",
    "benches",
    "test_utils"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Dock.io"]
license = "Apache-2.0"
repository = "https://github.com/docknetwork/crypto"

[workspace.dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
rayon = { version = "1" }
digest = "0.9"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }
zeroize = { version = "1.5.5", features = ["derive"] }
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
merlin = { version = "^3.0", default-features = false }
[workspace.dependencies.legogroth16]
#version = "0.3.0"
path = '../../legogroth16'
default-features = false

[profile.release]
lto = true

[profile.bench]
lto = true

[profile.production]
inherits = "release"
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1