[package]
name = "bbs_plus"
version = "0.24.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "BBS, BBS+, threshold BBS+ signatures and protocols for proof of knowledge of signature"
keywords = ["BBS", "BBS-plus", "threshold-BBS", "threshold-BBS-plus"]

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
digest.workspace = true
rayon = {workspace = true, optional = true}
itertools.workspace = true
serde.workspace = true
serde_with.workspace = true
zeroize.workspace = true
schnorr_pok = { version = "0.22.0", default-features = false, path = "../schnorr_pok" }
dock_crypto_utils = { version = "0.22.0", default-features = false, path = "../utils" }
oblivious_transfer_protocols = { version = "0.11.0", default-features = false, path = "../oblivious_transfer" }
secret_sharing_and_dkg = { version = "0.15.0", default-features = false, path = "../secret_sharing_and_dkg" }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
serde_json = "1.0"
rmp-serde = "1.0"
test_utils = { path = "../test_utils" }
sha3.workspace = true

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "schnorr_pok/std", "dock_crypto_utils/std", "serde/std", "oblivious_transfer_protocols/std", "secret_sharing_and_dkg/std"]
print-trace = [ "ark-std/print-trace", "schnorr_pok/print-trace", "dock_crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "schnorr_pok/parallel", "dock_crypto_utils/parallel", "oblivious_transfer_protocols/parallel", "secret_sharing_and_dkg/parallel"]
