[package]
name = "benches"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bbs_plus = { version = "0.13.0", default-features = false, path = "../bbs_plus" }
schnorr_pok = { version = "0.10.0", default-features = false, path = "../schnorr_pok" }
vb_accumulator = { version = "0.12.0", default-features = false, path = "../vb_accumulator" }
test_utils = { version = "0.1.0", default-features = false, path = "../test_utils" }
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
serde.workspace = true
serde_with.workspace = true
blake2 = { version = "0.10", default-features = false }
itertools = "0.10.5"
coconut-crypto = { version = "0.1.0", default-features = false, path = "../coconut" }
dock_crypto_utils = { default-features = false, path = "../utils" }
zeroize.workspace = true

[dev-dependencies]
criterion = "0.3"
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }

[[bench]]
name = "schnorr"
path = "benches/schnorr_protocol.rs"
harness = false

[[bench]]
name = "bbs_plus_signature"
path = "benches/bbs_plus_signature.rs"
harness = false

[[bench]]
name = "ps_signature"
path = "benches/ps_signature.rs"
harness = false

[[bench]]
name = "bbs_plus_proof"
path = "benches/bbs_plus_proof.rs"
harness = false

[[bench]]
name = "ps_proof"
path = "benches/ps_proof.rs"
harness = false

[[bench]]
name = "positive_accumulator"
path = "benches/positive_accumulator.rs"
harness = false

[[bench]]
name = "universal_accumulator"
path = "benches/universal_accumulator.rs"
harness = false

[[bench]]
name = "accum_witness_updates"
path = "benches/accum_witness_updates.rs"
harness = false
