[package]
name = "bulletproofs_plus_plus"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bulletproofs++"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
digest.workspace = true
serde.workspace = true
serde_with.workspace = true
zeroize.workspace = true
rayon = { workspace = true, optional = true }
dock_crypto_utils = { version = "0.19.0", default-features = false, path = "../utils" }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
ark-ed25519 = { version = "^0.4.0", default-features = false }
ark-curve25519 = { version = "^0.4.0", default-features = false }
ark-secp256k1 = { version = "^0.4.0", default-features = false }

[features]
default = [ "parallel"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "serde/std", "ark-poly/std", "dock_crypto_utils/std"]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "ark-poly/parallel", "dock_crypto_utils/parallel"]