[package]
name = "coconut-crypto"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Threshold anonymous credentials based on the paper [Security Analysis of Coconut, an Attribute-Based Credential Scheme with Threshold Issuance](https://eprint.iacr.org/2022/011)"

[lib]
path = "src/lib.rs"

[dependencies]
ark-ff = { version = "0.4.1", default-features = false }
ark-ec = { version = "0.4.1", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.1", default-features = false }
ark-serialize = { version = "0.4.1", default-features = false, features = [ "derive" ] }
serde = { version = "1.0.156", default-features = false, features = ["derive"] }
dock_crypto_utils = { version = "0.9.0", default-features = false, path = "../utils" }
digest = "0.10.6"
zeroize = { version = "1.5.7", features = ["derive"] }
rayon = { version = "1.7.0", optional = true }
schnorr_pok = { version = "0.9.0", default-features = false, path = "../schnorr_pok" }
itertools = "0.10.5"
secret_sharing_and_dkg = { version = "0.2.0", default-features = false }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }

[dev-dependencies]
blake2 = { version = "0.10.6", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }

[features]
default = ["std", "parallel"]
parallel = ["ark-std/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-ff/parallel", "ark-std/parallel", "dock_crypto_utils/parallel", "schnorr_pok/parallel", "secret_sharing_and_dkg/parallel", "rayon"]
std = ["serde/std", "ark-serialize/std", "ark-std/std", "ark-poly/std", "ark-ec/std", "ark-ff/std", "dock_crypto_utils/std", "schnorr_pok/std", "secret_sharing_and_dkg/std"]
