[package]
name = "coconut-crypto"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Threshold anonymous credentials based on the paper https://eprint.iacr.org/2022/011"

[lib]
path = "src/lib.rs"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
serde.workspace = true
digest.workspace = true
itertools.workspace = true
zeroize.workspace = true
serde_with.workspace = true
rayon = { workspace = true, optional = true }
utils = { package = "dock_crypto_utils", version = "0.19.0", default-features = false, path = "../utils" }
schnorr_pok = { version = "0.19.0", default-features = false, path = "../schnorr_pok" }
secret_sharing_and_dkg = { version = "0.12.0", default-features = false, path = "../secret_sharing_and_dkg" }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true

[features]
default = ["std", "parallel"]
parallel = ["ark-std/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-ff/parallel", "ark-std/parallel", "utils/parallel", "schnorr_pok/parallel", "secret_sharing_and_dkg/parallel", "rayon"]
std = ["serde/std", "ark-serialize/std", "ark-std/std", "ark-poly/std", "ark-ec/std", "ark-ff/std", "utils/std", "schnorr_pok/std", "secret_sharing_and_dkg/std"]
