[package]
name = "compressed_sigma"
version = "0.0.1"
edition = "2021"
authors = ["Dock.io"]
license = "Apache-2.0"
repository = "https://github.com/docknetwork/crypto"

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-sponge = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
rayon = { version = "1", optional = true }
digest = "0.9"
dock_crypto_utils = { version = "0.4.0", default-features = false, path = "../utils" }

[dev-dependencies]
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

[features]
default = [ "std", "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "ark-sponge/std", "ark-poly/std"]
print-trace = [ "ark-std/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-poly/parallel", "rayon" ]