[package]
name = "dock-crypto-utils"
version = "0.1.0"
edition = "2018"
authors = ["Dock.io"]
license = "Apache-2.0"
description = "Common code for Dock's crypto libraries"
repository = "https://github.com/docknetwork/crypto"

[lib]
doctest = false
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
digest = "0.9"
hkdf = "0.11.0"

[dev-dependencies]
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

[features]
default = [ "std" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std"]
print-trace = [ "ark-std/print-trace" ]
